--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     <div id="wrapper">
         <div id="intro">
             <div class="avatar-container">
-                <img src="\images\avatar.jpg" alt="Huy-Hoang Thieu">
+                <img src="images/avatar.jpg" alt="Huy-Hoang Thieu">
             </div>
             <h1>Huy-Hoang Thieu</h1>
             <p style="font-size: 1.2rem; margin: 1rem 0;">Data Engineer and Analyst</p>
