--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Huy-Hoang Thieu - Data Engineer and Analyst Portfolio</title>
+    <title>Huy-Hoang Thieu - Data Engineer Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
-            --peach-fuzz: #a47864; /* Pantone Color of the Year 2024 */
-            --primary-color: #2d3436;
-            --secondary-color: #a47864; /* Darker peach */
-            --accent-color: #a47864; /* Lighter peach */
-            --text-color: #2d3436;
-            --background-color: #FFF5F0; /* Very light peach */
+            --peach-fuzz: #3498db; /* Changed to blue */
+            --primary-color: #2c3e50; /* Darker blue */
+            --secondary-color: #2980b9; /* Medium blue */
+            --accent-color: #3498db; /* Light blue */
+            --text-color: #2c3e50; /* Dark blue for text */
+            --background-color: #ecf0f1; /* Light gray background */
             --card-background: #ffffff;
-            --hover-color: #FFE6D9; /* Soft peach */
+            --hover-color: #d6eaf8; /* Soft light blue */
         }
 
         * {
@@ -298,7 +298,7 @@
         }
 
         .soft-skills h3 {
-            color: #a47864;
+            color: var(--secondary-color);
             margin-bottom: 20px;
             font-size: 24px;
         }
@@ -311,7 +311,7 @@
         }
 
         .skill-box {
-            background: #FFF5F0;
+            background: var(--background-color);
             padding: 20px;
             border-radius: 10px;
             text-align: center;
@@ -324,7 +324,7 @@
 
         .skill-box:hover {
             transform: translateY(-5px);
-            background: #FFE6D9;
+            background: var(--hover-color);
         }
 
         @media (max-width: 1024px) {
@@ -353,10 +353,10 @@
         }
 
         .tech-section h3 {
-            color: #a47864;
+            color: var(--secondary-color);
             font-size: 1.8rem;
             margin-bottom: 2rem;
-            border-bottom: 2px solid #a47864;
+            border-bottom: 2px solid var(--secondary-color);
             padding-bottom: 0.5rem;
         }
 
@@ -374,10 +374,10 @@
         }
 
         .category-title {
-            color: #a47864;
+            color: var(--secondary-color);
             font-size: 1.3rem;
             margin-bottom: 1.5rem;
-            border-bottom: 1px solid #FFE6D9;
+            border-bottom: 1px solid var(--hover-color);
             padding-bottom: 0.5rem;
         }
 
@@ -388,7 +388,7 @@
         }
 
         .skill-card {
-            background: #FFF5F0;
+            background: var(--background-color);
             padding: 1rem 1.5rem;
             border-radius: 10px;
             display: flex;
@@ -401,19 +401,19 @@
 
         .skill-card:hover {
             transform: translateY(-3px);
-            background: #FFE6D9;
-            box-shadow: 0 4px 12px rgba(164, 120, 100, 0.1);
+            background: var(--hover-color);
+            box-shadow: 0 4px 12px rgba(41, 128, 185, 0.1);
         }
 
         .skill-card i {
-            color: #a47864;
+            color: var(--secondary-color);
             font-size: 1.2rem;
             width: 20px;
             text-align: center;
         }
 
         .skill-card span {
-            color: #2d3436;
+            color: var(--text-color);
             font-size: 1rem;
         }
 
@@ -442,7 +442,7 @@
 
         .nav-button {
             padding: 1rem 2rem;
-            background: #a47864;
+            background: var(--secondary-color);
             color: white;
             text-decoration: none;
             border-radius: 10px;
@@ -454,13 +454,13 @@
         }
 
         .nav-button:hover {
-            background: #8b6352;
+            background: var(--primary-color);
             transform: translateY(-2px);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
         }
 
         .nav-button.active {
-            background: #8b6352;
+            background: var(--primary-color);
         }
     </style>
 </head>
@@ -468,10 +468,10 @@
     <div id="wrapper">
         <div id="intro">
             <div class="avatar-container">
-                <img src="images/avatar.jpg" alt="Huy-Hoang Thieu">
+                <img src="images/avt_hoang.jpg" alt="Huy-Hoang Thieu">
             </div>
             <h1>Huy-Hoang Thieu</h1>
-            <p style="font-size: 1.2rem; margin: 1rem 0;">Data Engineer and Analyst</p>
+            <p style="font-size: 1.2rem; margin: 1rem 0;">Data Engineer</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/thieuhuyhoang/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/hoangthieu-data"><i class="fab fa-github"></i></a>
@@ -479,11 +479,10 @@
         </div>
         <div class="nav-buttons">
             <a href="index.html" class="nav-button active">About Me</a>
-            <a href="projects.html" class="nav-button">Projects</a>
         </div>
         <section class="profile-stats">
             <div class="stat-card">
-                <div class="stat-number">&lt; 1</div>
+                <div class="stat-number">1</div>
                 <div>Years Experience</div>
             </div>
             <div class="stat-card">
@@ -491,7 +490,7 @@
                 <div>Publication</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">3.4</div>
+                <div class="stat-number">3.7</div>
                 <div>GPA / 4.0</div>
             </div>
         </section>
@@ -516,6 +515,30 @@
 
         <section class="profile-section">
             <h3>Professional Experience</h3>
+            <div class="experience-card">
+                <h4>Data Engineer - AHAMOVE</h4>
+                <h5>Jan 2025 - Present</h5>
+                <ul>
+                    <li>
+                        <strong>Data Modeling:</strong> Using dbt to redesign and model core tables for improved analytics
+                    </li>
+                    <li>
+                        <strong>Workflow Automation:</strong> Implemented Airflow DAGs for automated data pipelines
+                    </li>
+                    <li>
+                        <strong>Data Quality Monitoring:</strong> Set up Airflow alerts to detect schema changes and new values
+                    </li>
+                    <li>
+                        <strong>ETL Development:</strong> Built robust data transformation workflows
+                    </li>
+                    <li>
+                        <strong>Documentation:</strong> Created comprehensive data dictionary for business users
+                    </li>
+                    <li>
+                        <strong>Performance Optimization:</strong> Improved query efficiency by 30% through model optimization
+                    </li>
+                </ul>
+            </div>
             <div class="experience-card">
                 <h4>Data Engineer - YODY Fashion Join Stock Company</h4>
                 <h5>Jul 2024 - Dec 2024</h5>
@@ -542,6 +565,49 @@
             </div>
         </section>
 
+        <section class="profile-section">
+            <h3>Projects</h3>
+            <div class="experience-card">
+                <h4>Data Observability with Airflow</h4>
+                <h5>AHAMOVE | Feb 2025 - Present</h5>
+                <ul>
+                    <li>
+                        <strong>Schema Change Detection:</strong> Created Airflow DAGs to monitor and alert on schema changes in source data
+                    </li>
+                    <li>
+                        <strong>Data Quality Checks:</strong> Implemented validation rules to detect anomalies and new values
+                    </li>
+                    <li>
+                        <strong>Alerting System:</strong> Set up Slack notifications for data quality issues requiring immediate attention
+                    </li>
+                    <li>
+                        <strong>Documentation:</strong> Maintained repository of data quality rules and standards
+                    </li>
+                </ul>
+            </div>
+            <div class="experience-card">
+                <h4>Core Data Model Redesign with dbt</h4>
+                <h5>AHAMOVE | Jan 2025 - Present</h5>
+                <ul>
+                    <li>
+                        <strong>Data Modeling:</strong> Redesigned core fact and dimension tables using dbt
+                    </li>
+                    <li>
+                        <strong>Documentation:</strong> Implemented dbt docs for self-service data discovery
+                    </li>
+                    <li>
+                        <strong>Testing:</strong> Developed comprehensive data tests to ensure data integrity
+                    </li>
+                    <li>
+                        <strong>CI/CD:</strong> Set up continuous integration pipeline for dbt models
+                    </li>
+                    <li>
+                        <strong>Performance:</strong> Optimized query performance through materialization strategies
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <section class="profile-section education-section">
             <h3>Education</h3>
             <div class="education-card">
@@ -559,7 +625,7 @@
                         </div>
                         <div class="detail-item">
                             <span class="label">GPA:</span>
-                            <span class="value highlight">3.4/4</span>
+                            <span class="value highlight">3.7/4</span>
                         </div>
                         <div class="detail-item">
                             <span class="label">IELTS:</span>
@@ -614,6 +680,10 @@
                         <div class="skill-card">
                             <i class="fas fa-stream"></i>
                             <span>Apache Airflow</span>
+                        </div>
+                        <div class="skill-card">
+                            <i class="fas fa-layer-group"></i>
+                            <span>dbt</span>
                         </div>
                         <div class="skill-card">
                             <i class="fas fa-random"></i>
